aprendendo sobre posição absolute, fixed, sticky e z-index

--- a/Seção3_CSS/css/style.css
+++ b/Seção3_CSS/css/style.css
@@ -464,3 +464,88 @@ h2{
     padding: 10px;
     margin: 20px;
 }
+
+/* 46 - Relative com Absolute */
+.relative-container{
+    width: 300px;
+    height: 300px;
+    border: 1px solid red;
+    margin-top: 120px;
+    position: relative;
+}
+
+.absolute-1, .absolute-2{
+    width: 50px;
+    height: 50px;
+    background-color: #422;
+    position: absolute;
+}
+
+.absolute-1{
+    top: 10px;
+    left: 10px;
+}
+
+.absolute-2{
+    bottom: 10px;
+    right: 10px;
+}
+
+.paragrafo-absolute{
+    font-size: 24px;
+}
+
+/* 47 - Position Fixed */
+.fixed{
+    width: 400px;
+    height: 250px;
+    background-color: #851;
+    border: 1px solid blue;
+    position: fixed;
+    top: 50px;
+    right: 100px;
+}
+
+.p-fixed{
+    color: #fff;
+    padding: 10px;
+    margin: 20px;
+}
+
+/* 48 - Position Sticky */
+.sticky{
+    width: 400px;
+    height: 350px;
+    background-color: #994;
+    border: 1px solid green;
+    position: sticky;
+    top: 10px;
+}
+
+/* 49 - z-index */
+.absolute-3, .absolute-4, .absolute-5{
+    width: 50px;
+    height: 50px;
+    background-color: #123;
+    position: absolute;
+}
+
+.absolute-3{
+    top: 0;
+    left: 0;
+    z-index: 3;
+}
+
+.absolute-4{
+    top: 10px;
+    left: 10px;
+    background-color: #246;
+    z-index: 2;
+}
+
+.absolute-5{
+    top: 40px;
+    left: 40px;
+    background-color: #453;
+    z-index: 1;
+}
